--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -35,7 +35,7 @@
 			<div class="col-2">
 				<div class="row">
 					<div class="logo col-2">
-						<a href="/" class="no-barba">Никулин</a>
+						<a href="./" class="no-barba">Никулин</a>
 					</div>
 					<div class="prof col-2">
 						Front-end разработчик
@@ -44,13 +44,13 @@
 			</div>					
 			<ul class="top_nav col">
 				<li>
-					<a class="no-barba" href="/mitalent.html">Проекты</a>
+					<a class="no-barba" href="./mitalent.html">Проекты</a>
 				</li>
 				<li>
-					<a class="no-barba" href="/about.html">Обо мне</a>
+					<a class="no-barba" href="./about.html">Обо мне</a>
 				</li>
 				<li>
-					<a class="no-barba" href="/contact.html">Связаться</a>
+					<a class="no-barba" href="./contact.html">Связаться</a>
 				</li>
 			</ul>
 		</div>		
