--- a/portfolio/muncak.html
+++ b/portfolio/muncak.html
@@ -33,7 +33,7 @@
 			<div class="col-2">
 				<div class="row">
 					<div class="logo col-2">
-						<a class="no-barba" href="/">Никулин</a>
+						<a class="no-barba" href="./">Никулин</a>
 					</div>
 					<div class="prof col-2">
 						Front-end разработчик
@@ -42,13 +42,13 @@
 			</div>					
 			<ul class="top_nav col">
 				<li>
-					<a class="no-barba" href="/mitalent.html">Проекты</a>
+					<a class="no-barba" href="./mitalent.html">Проекты</a>
 				</li>
 				<li>
-					<a class="no-barba" href="/about.html">Обо мне</a>
+					<a class="no-barba" href="./about.html">Обо мне</a>
 				</li>
 				<li>
-					<a class="no-barba" href="/contact.html">Связаться</a>
+					<a class="no-barba" href="./contact.html">Связаться</a>
 				</li>
 			</ul>
 		</div>
@@ -68,7 +68,7 @@
 					<div class="row justify-content-flex-end">
 						<div class="col-2 col-md col-sm col-ex-sm">
 							<div class="row">
-								<div class="col-2 col-md-4 description">Muncak представляет собой landing page обозревающий компанию занимающуюся походами и путешествиями, а так же волонтерством. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp, так же сайт является полностью адаптивным и кроссбраузерным <a href="http://muncak.bazarov.beget.tech">Смотреть сайт</a></div>	
+								<div class="col-2 col-md-4 description">Muncak представляет собой landing page обозревающий компанию занимающуюся походами и путешествиями, а так же волонтерством. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp, так же сайт является полностью адаптивным и кроссбраузерным <a href="./muncak/index.html">Смотреть сайт</a></div>	
 							</div>								
 						</div>
 					</div>
@@ -101,7 +101,7 @@
 					<div class="col-2 col-sm col-ex-sm img_project img_muncak-3"></div>
 				</div>		
 			</section>
-			<a href="mitalent.html" class="project-next wrap">				
+			<a href="./mitalent.html" class="project-next wrap">				
 				<div class="row">
 					<div class="col col-md col-ex-sm headline__project-next">				
 						<p>Следующий проект</p>
