--- a/portfolio/surf.html
+++ b/portfolio/surf.html
@@ -33,7 +33,7 @@
 			<div class="col-2">
 				<div class="row">
 					<div class="logo col-2">
-						<a class="no-barba" href="/">Никулин</a>
+						<a class="no-barba" href="./">Никулин</a>
 					</div>
 					<div class="prof col-2">
 						Front-end разработчик
@@ -42,13 +42,13 @@
 			</div>					
 			<ul class="top_nav col">
 				<li>
-					<a class="no-barba" href="/mitalent.html">Проекты</a>
+					<a class="no-barba" href="./mitalent.html">Проекты</a>
 				</li>
 				<li>
-					<a class="no-barba" href="/about.html">Обо мне</a>
+					<a class="no-barba" href="./about.html">Обо мне</a>
 				</li>
 				<li>
-					<a class="no-barba" href="/contact.html">Связаться</a>
+					<a class="no-barba" href="./contact.html">Связаться</a>
 				</li>
 			</ul>
 		</div>
@@ -68,7 +68,7 @@
 					<div class="row justify-content-flex-end">
 						<div class="col-2 col-md col-sm col-ex-sm">
 							<div class="row">
-								<div class="col-2 col-md-4 description"><p>Surfing лэндинг представляет собой сайт посвещенный серфингу, на котором вы можете найти всю необходимую информацию о серфинге и заказать себе доску для серфа. Сайт создан с помощью HTML, CSS3, Js, JQuery, так же сайт является полностью адаптивным и кроссбраузерным. <a href="http://surf.bazarov.beget.tech">Смотреть сайт</a></p></div>	
+								<div class="col-2 col-md-4 description"><p>Surfing лэндинг представляет собой сайт посвещенный серфингу, на котором вы можете найти всю необходимую информацию о серфинге и заказать себе доску для серфа. Сайт создан с помощью HTML, CSS3, Js, JQuery, так же сайт является полностью адаптивным и кроссбраузерным. <a href="./surf/index.html">Смотреть сайт</a></p></div>	
 							</div>								
 						</div>
 					</div>
@@ -103,7 +103,7 @@
 					<div class="col-2 col-sm col-ex-sm img_project img_surf-3"></div>
 				</div>		
 			</section>
-			<a href="tannneroff.html" class="project-next wrap">	
+			<a href="./tannneroff.html" class="project-next wrap">	
 				<div class="row">
 					<div class="col col-md col-ex-sm headline__project-next">					
 						<p>Следующий проект</p>
