--- a/portfolio/tech.html
+++ b/portfolio/tech.html
@@ -32,7 +32,7 @@
 			<div class="col-2">
 				<div class="row">
 					<div class="logo col-2">
-						<a class="no-barba" href="/">Никулин</a>
+						<a class="no-barba" href="./">Никулин</a>
 					</div>
 					<div class="prof col-2">
 						Front-end разработчик
@@ -41,13 +41,13 @@
 			</div>					
 			<ul class="top_nav col">
 				<li>
-					<a class="no-barba" href="/mitalent.html">Проекты</a>
+					<a class="no-barba" href="./mitalent.html">Проекты</a>
 				</li>
 				<li>
-					<a class="no-barba" href="/about.html">Обо мне</a>
+					<a class="no-barba" href="./about.html">Обо мне</a>
 				</li>
 				<li>
-					<a class="no-barba" href="/contact.html">Связаться</a>
+					<a class="no-barba" href="./contact.html">Связаться</a>
 				</li>
 			</ul>
 		</div>
@@ -69,7 +69,7 @@
 							<div class="row">
 								<div class="col-2 col-md-4 description">
 									<p>
-										Technic landing представляет собой сайт landing обозревающий web студию. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp и интегрирован на CMS Wordpress, так же сайт является полностью адаптивным и кроссбраузерным <a href="http://land.bazarov.beget.tech">Смотреть сайт</a>
+										Technic landing представляет собой сайт landing обозревающий web студию. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp и интегрирован на CMS Wordpress, так же сайт является полностью адаптивным и кроссбраузерным <a href="./landing/index.html">Смотреть сайт</a>
 									</p>
 								</div>	
 							</div>								
@@ -104,7 +104,7 @@
 					<div class="col-2 col-sm img_project col-ex-sm img_tech-3"></div>
 				</div>		
 			</section>
-			<a href="muncak.html" class="project-next wrap">								
+			<a href="./muncak.html" class="project-next wrap">								
 				<div class="row">
 					<div class="col col-md col-ex-sm headline__project-next">					
 						<p>Следующий проект</p>
