--- a/portfolio/mitalent.html
+++ b/portfolio/mitalent.html
@@ -70,7 +70,7 @@
 					<div class="row justify-content-flex-end">
 						<div class="col-2 col-md col-sm col-ex-sm">
 							<div class="row">
-								<div class="col-2 col-md-4 description"><p>MiTalent представляет собой сайт-портфолио студии, занимающаяся музыкой, фотографией, комедийными шоу. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp и интегрирован на CMS Wordpress, так же сайт является полностью адаптивным и кроссбраузерным <a href="./mitalent/index.html">Смотреть сайт</a></p></div>	
+								<div class="col-2 col-md-4 description"><p>MiTalent представляет собой сайт-портфолио студии, занимающаяся музыкой, фотографией, комедийными шоу. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp и интегрирован на CMS Wordpress, так же сайт является полностью адаптивным и кроссбраузерным <a href="/mitalent/index.html">Смотреть сайт</a></p></div>	
 							</div>								
 						</div>
 					</div>
