--- a/portfolio/tannneroff.html
+++ b/portfolio/tannneroff.html
@@ -70,7 +70,7 @@
 								<div class="col-2 col-md-4 description">
 									<p>
 										TannerOff представляет собой сайт, обозревающий сумки и рюкзаки фирмы Tanner. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp
-										<a href="./tanneroff/index.html">Смотреть сайт</a>
+										<a href="/tanneroff/index.html">Смотреть сайт</a>
 									</p>
 								</div>	
 							</div>								
