--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -90,7 +90,7 @@
 	</header>
 	<footer>
 		<div class="row justify-content-flex-end">
-			<div class="col">Дизайн by <span><a href="https://www.behance.net/dbrvsk">ДБРВСК</a></span></div>
+			<div class="col">Дизайн by <span><a class="no-barba" href="https://www.behance.net/dbrvsk">ДБРВСК</a></span></div>
 		</div>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
