--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -57,26 +57,26 @@
 		<div class="row contacts justify-content-flex-end">
 			<div class="col contact_block">
 				<p>Телефон</p>
-				<span><a href="tel:+79166363637">+7 916 636 36 37</a></span>
+				<span><a class="no-barba" href="tel:+79166363637">+7 916 636 36 37</a></span>
 			</div>
 			<div class="col contact_block">
 				<p>Vk</p>
-				<span><a href="https://vk.com/odnkclvncbk">Andrey Nikylin</a></span>
+				<span><a class="no-barba" href="https://vk.com/odnkclvncbk">Andrey Nikylin</a></span>
 			</div>
 			<div class="col contact_block">
 				<p>Facebook</p>
-				<span><a href="https://www.facebook.com/andrey.nikylin.142">Andrey Nikylin</a></span>
+				<span><a class="no-barba" href="https://www.facebook.com/andrey.nikylin.142">Andrey Nikylin</a></span>
 			</div>
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-2 col-md-2 col-sm-2 email">
-				<a href="mailto:bzrov@mail.ru?subject=Feedback">Отправить email</a>
+				<a class="no-barba" href="mailto:bzrov@mail.ru?subject=Feedback">Отправить email</a>
 			</div>
 		</div>		
 	</header>
 	<footer>
 		<div class="row justify-content-flex-end">
-			<div class="col">Дизайн by <span><a href="https://www.behance.net/dbrvsk">ДБРВСК</a></span></div>
+			<div class="col">Дизайн by <span><a class="no-barba" href="https://www.behance.net/dbrvsk">ДБРВСК</a></span></div>
 		</div>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
