--- a/portfolio/muncak.html
+++ b/portfolio/muncak.html
@@ -68,7 +68,7 @@
 					<div class="row justify-content-flex-end">
 						<div class="col-2 col-md col-sm col-ex-sm">
 							<div class="row">
-								<div class="col-2 col-md-4 description">Muncak представляет собой landing page обозревающий компанию занимающуюся походами и путешествиями, а так же волонтерством. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp, так же сайт является полностью адаптивным и кроссбраузерным <a href="/muncak/index.html">Смотреть сайт</a></div>	
+								<div class="col-2 col-md-4 description">Muncak представляет собой landing page обозревающий компанию занимающуюся походами и путешествиями, а так же волонтерством. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp, так же сайт является полностью адаптивным и кроссбраузерным <a class="no-barba" href="/muncak/index.html">Смотреть сайт</a></div>	
 							</div>								
 						</div>
 					</div>
