--- a/portfolio/surf.html
+++ b/portfolio/surf.html
@@ -68,7 +68,7 @@
 					<div class="row justify-content-flex-end">
 						<div class="col-2 col-md col-sm col-ex-sm">
 							<div class="row">
-								<div class="col-2 col-md-4 description"><p>Surfing лэндинг представляет собой сайт посвещенный серфингу, на котором вы можете найти всю необходимую информацию о серфинге и заказать себе доску для серфа. Сайт создан с помощью HTML, CSS3, Js, JQuery, так же сайт является полностью адаптивным и кроссбраузерным. <a href="/surf/index.html">Смотреть сайт</a></p></div>	
+								<div class="col-2 col-md-4 description"><p>Surfing лэндинг представляет собой сайт посвещенный серфингу, на котором вы можете найти всю необходимую информацию о серфинге и заказать себе доску для серфа. Сайт создан с помощью HTML, CSS3, Js, JQuery, так же сайт является полностью адаптивным и кроссбраузерным. <a class="no-barba" href="/surf/index.html">Смотреть сайт</a></p></div>	
 							</div>								
 						</div>
 					</div>
