--- a/portfolio/tech.html
+++ b/portfolio/tech.html
@@ -69,7 +69,7 @@
 							<div class="row">
 								<div class="col-2 col-md-4 description">
 									<p>
-										Technic landing представляет собой сайт landing обозревающий web студию. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp и интегрирован на CMS Wordpress, так же сайт является полностью адаптивным и кроссбраузерным <a href="/landing/index.html">Смотреть сайт</a>
+										Technic landing представляет собой сайт landing обозревающий web студию. Сайт сделан с помощью HTML,CSS3,Js,JQuery собран на сборщике проектов Gulp и интегрирован на CMS Wordpress, так же сайт является полностью адаптивным и кроссбраузерным <a class="no-barba" href="/landing/index.html">Смотреть сайт</a>
 									</p>
 								</div>	
 							</div>								
