update css and fix links in html(btn's links)

--- a/finexpert/index.html
+++ b/finexpert/index.html
@@ -33,7 +33,7 @@
 			</nav>
 			<div class="row contact">
 				<a class="phone" href="tel:+7 (495) 162 09 65">+7 (495) 162-09-65</a>
-				<button class="header__btn btn"><span>Бесплатная консультация</span> </button>
+				<button class="header__btn btn"><a href="#contact">Бесплатная консультация</a> </button>
 			</div>	
 		</div>
 	</header>
@@ -138,27 +138,32 @@
 	</section>
 	<section class="container hero" id="hero">
 		<div class="hero__text">
-			<p class="wow fadeIn" data-wow-offset="100">Сотрудники Финэксперта работали в <img src="" alt="">
-				<div class="hero__work-place work-place">
+			<p class="wow fadeIn" data-wow-offset="100">Сотрудники Финэксперта работали в </p>
+				<div class="hero__work-place work-place wow fadeIn" data-wow-offset="100">
 					<a class="work-place__link" href="https://www.ey.com/ru/ru/home">Ernst&Young</a>
 
 				</div>
-				<div class="hero__work-place">
+				<div class="hero__work-place wow fadeIn" data-wow-offset="100">
 					<a href="https://www2.deloitte.com/ru/ru.html">Deloitte.</a>
 				</div>
-				<div class="hero__work-place">
+				<div class="hero__work-place wow fadeIn" data-wow-offset="100">
 					<a href="https://www.vtb.ru/">ВТБ</a>
 				</div>
-				и 
-				<div class="hero__work-place">
+				<span class="wow fadeIn" data-wow-offset="100">
+					и 
+				</span> 
+				<div class="hero__work-place wow fadeIn" data-wow-offset="100">
 					<a href="https://moscow.megafon.ru/">Мегафоне</a>
 				</div>
-				Наши финансовые
-				аналитки, налоговые юристы
-				и бухгалтеры разберутся даже в самой
-				запутанной проблеме и предложат
-				комплексное решение.
-			</p>
+				<p class="wow fadeIn" data-wow-offset="100">
+				
+					Наши финансовые
+					аналитки, налоговые юристы
+					и бухгалтеры разберутся даже в самой
+					запутанной проблеме и предложат
+					комплексное решение.
+				</p>
+			
 			<div class="hero__img wow fadeIn" data-wow-offset="100">
 				<img src="img/hero.png" alt="">
 			</div>
@@ -579,7 +584,7 @@
 			</div>
 		</section>
 	</div>
-	<section class="container contact">
+	<section class="container contact" id="contact">
 		<div class="form row">
 			<div class="form__col-3 col wow fadeIn" data-wow-offset="120">
 				<div class="form__title">
@@ -639,7 +644,7 @@
 					</div>
 				</div>
 				<button class="footer__card-btn btn">
-					<span>Попробовать...</span>
+					<a href="https://finexpert24.com/poleznye-materialy/articles/">Попробовать...</a>
 				</button>
 			</div>
 			<div class="subscribe">
