fix animation offset and delay in html

--- a/rizo/index.html
+++ b/rizo/index.html
@@ -64,22 +64,22 @@
 			<div class="preview__img img_red wow fadeIn" data-wow-delay=".2s" data-wow-offset="100" >
 				<img src="./img/preview__img_red.jpg" alt="">
 			</div>
-			<div class="preview__img img_green wow fadeIn" data-wow-delay=".4s" data-wow-offset="100">
+			<div class="preview__img img_green wow fadeIn" data-wow-delay=".3s" data-wow-offset="100">
 				<img src="./img/preview__img_green.jpg" alt="">
 			</div>
-			<div class="preview__img img_yellow wow fadeIn" data-wow-delay=".6s" data-wow-offset="100">
+			<div class="preview__img img_yellow wow fadeIn" data-wow-delay=".4s" data-wow-offset="100">
 					<img src="./img/preview__img_yellow.jpg" alt="">
 				</div>
-			<div class="preview__img img_pink wow fadeIn" data-wow-delay=".8s" data-wow-offset="100">
+			<div class="preview__img img_pink wow fadeIn" data-wow-delay=".5s" data-wow-offset="100">
 				<img src="./img/preview__img_pink.jpg" alt="">
 			</div>
-			<div class="preview__img img_purpl wow fadeIn" data-wow-delay="1s" data-wow-offset="100">
+			<div class="preview__img img_purpl wow fadeIn" data-wow-delay=".6s" data-wow-offset="100">
 				<img src="./img/preview__img_purpl.jpg" alt="">
 			</div>
-			<div class="preview__img img_black wow fadeIn" data-wow-delay="1.2s" data-wow-offset="100">
+			<div class="preview__img img_black wow fadeIn" data-wow-delay=".7s" data-wow-offset="100">
 				<img src="./img/preview__img_black.jpg" alt="">
 			</div>
-			<div class="preview__img img_blue wow fadeIn" data-wow-delay="1.4s" data-wow-offset="100">
+			<div class="preview__img img_blue wow fadeIn" data-wow-delay=".8s" data-wow-offset="100">
 				<img src="./img/preview__img_blue.jpg" alt="">
 			</div>
 			<button class="about__btn btn wow fadeInUp" data-wow-delay=".3s" data-wow-offset="100">
@@ -91,12 +91,12 @@
 		<div class="example__wrapper row">
 			<div class="example__layers col-1 wow fadeInLeft">
 
-				<div class="layer layer_white wow fadeInLeft" data-wow-offset="150"></div>
-				<div class="layer layer_pink wow fadeInDown" data-wow-offset="150"></div>
-				<div class="layer layer_yellow wow fadeInDown" data-wow-offset="150"></div>
-				<div class="layer layer_blue wow fadeInDown" data-wow-offset="150"></div>
+				<div class="layer layer_white wow fadeInLeft" data-wow-offset="100"></div>
+				<div class="layer layer_pink wow fadeInDown" data-wow-offset="100"></div>
+				<div class="layer layer_yellow wow fadeInDown" data-wow-offset="100"></div>
+				<div class="layer layer_blue wow fadeInDown" data-wow-offset="100"></div>
 			</div>
-			<div class="example__content content col-2 wow fadeIn" data-wow-delay="2.5s">
+			<div class="example__content content col-2 wow fadeIn" data-wow-delay="2.0s">
 				<div class="content__title title">
 					<p>
 						полноцвет
@@ -119,16 +119,16 @@
 			<p>требования к макетам</p>
 		</div>
 		<div class="requirements__content row">
-			<div class="requirements__item requirement wow fadeIn" data-wow-delay=".2s" data-wow-offset="150">
-				<div class="requirement__picture requirement__picture_border row wow fadeIn" data-wow-delay=".6s" data-wow-offset="150">
-					<div class="horizontal-line_dotted "  data-wow-offset="150">
+			<div class="requirements__item requirement wow fadeIn" data-wow-delay=".2s" data-wow-offset="50">
+				<div class="requirement__picture requirement__picture_border row wow fadeIn" data-wow-delay=".6s" data-wow-offset="50">
+					<div class="horizontal-line_dotted "  data-wow-offset="50">
 
 					</div>
 					<div class="row">
-						<div class="vertical-line_dotted "  data-wow-offset="150">
+						<div class="vertical-line_dotted "  data-wow-offset="50">
 
 						</div>
-						<div class="vertical-line_dotted "  data-wow-offset="150">
+						<div class="vertical-line_dotted "  data-wow-offset="50">
 
 						</div>
 					</div>
@@ -136,23 +136,23 @@
 
 					</div>
 				</div>
-				<div class="requirement__text wow fadeInUp"  data-wow-delay=".6s" data-wow-offset="150">
+				<div class="requirement__text wow fadeInUp"  data-wow-delay=".6s" data-wow-offset="50">
 					<p>Поля 10 мм с каждого края лсита</p>
 				</div>
 			</div>
-			<div class="requirements__item requirement wow fadeIn" data-wow-delay=".4s" data-wow-offset="150">
-				<div class="requirement__picture requirement__picture_fill row wow fadeIn" data-wow-delay=".6s" data-wow-offset="150">
+			<div class="requirements__item requirement wow fadeIn" data-wow-delay=".4s" data-wow-offset="50">
+				<div class="requirement__picture requirement__picture_fill row wow fadeIn" data-wow-delay=".6s" data-wow-offset="50">
 	
 				</div>
-				<div class="requirement__text wow fadeInUp" data-wow-delay=".8s" data-wow-offset="150">
+				<div class="requirement__text wow fadeInUp" data-wow-delay=".8s" data-wow-offset="50">
 					<p>При заливке всей страницы = плотность цвета 75%</p>
 				</div>
 			</div>
-			<div class="requirements__item requirement wow fadeIn" data-wow-delay=".6s" data-wow-offset="150">
+			<div class="requirements__item requirement wow fadeIn" data-wow-delay=".6s" data-wow-offset="50">
 				<div class="requirement__picture requirement__picture_stamp logo row">
-					<p class="logo__text wow fadeIn" data-wow-delay="1s" data-wow-offset="150">:И</p>
+					<p class="logo__text wow fadeIn" data-wow-delay="1s" data-wow-offset="50">:И</p>
 				</div>
-				<div class="requirement__text wow fadeInUp" data-wow-delay="1s" data-wow-offset="150">
+				<div class="requirement__text wow fadeInUp" data-wow-delay="1s" data-wow-offset="50">
 					<p>Изображения в градациях серого.Битмап не нужен</p>
 				</div>
 			</div>
@@ -201,7 +201,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="requirement__text wow fadeInUp" data-wow-delay="1.4s" data-wow-offset="150">
+				<div class="requirement__text wow fadeInUp" data-wow-delay="1.4s" data-wow-offset="50">
 					<p>
 						Для каждого цвета отдельный черно-белый ПДФ
 					</p>
@@ -214,13 +214,13 @@
 			<div class="form__input col-2 wow fadeIn"  data-wow-offset="100">
 				<input class="calculate__input input input__input" type="text" placeholder="Я хочу напечатать">
 			</div>
-			<div class="form__btn col-1 wow fadeIn" data-wow-delay=".6s" data-wow-offset="100">
+			<div class="form__btn col-1 wow fadeIn" data-wow-delay=".6s" data-wow-offset="50">
 				 <button class="btn">
 					 <span>посчитать</span>
 				 </button>
 			</div>
 		</form>
-		<div class="calculate__text wow fadeInUp" data-wow-delay=".3s" data-wow-offset="100">
+		<div class="calculate__text wow fadeInUp" data-wow-delay=".3s" data-wow-offset="50">
 			<p>например: зин а5, 24 стр, 80г, синий, 100 штук</p>
 		</div>
 	</section>
