fix anchors and map coords

--- a/elainer/index.html
+++ b/elainer/index.html
@@ -24,11 +24,11 @@
 				<p class="logo__second-word">vision smile</p>
 			</div>
 			<div class="header__menu">
-				<a href="" class="header-menu__item header-menu__item_active">О нас</a>
-				<a href="" class="header-menu__item">Преимущества</a>
-				<a href="" class="header-menu__item">Отзывы</a>
-				<a href="" class="header-menu__item">FAQ</a>
-				<a href="" class="header-menu__item">Контакты</a>
+				<a href="#hero" class="header-menu__item header-menu__item_active " data-target="anchor">О нас</a>
+				<a href="#advantages" class="header-menu__item" data-target="anchor">Преимущества</a>
+				<a href="#reviews" class="header-menu__item" data-target="anchor">Отзывы</a>
+				<a href="#questions" class="header-menu__item" data-target="anchor">FAQ</a>
+				<a href="#map-container" class="header-menu__item" data-target="anchor">Контакты</a>
 			</div>
 		</div>
 		<div class="header__item">
@@ -80,11 +80,11 @@
 				<p class="header__menu-text_media">Меню</p>
 			</div>
 			<div class="header__nav_media">
-				<a href="" class="header-menu__item header-menu__item_active">О нас</a>
-				<a href="" class="header-menu__item">Преимущества</a>
-				<a href="" class="header-menu__item">Отзывы</a>
-				<a href="" class="header-menu__item">FAQ</a>
-				<a href="" class="header-menu__item">Контакты</a>
+				<a href="#hero" class="header-menu__item header-menu__item_active" data-target="anchor">О нас</a>
+				<a href="#advantages" class="header-menu__item" data-target="anchor">Преимущества</a>
+				<a href="#reviews" class="header-menu__item" data-target="anchor">Отзывы</a>
+				<a href="#questions" class="header-menu__item" data-target="anchor">FAQ</a>
+				<a href="#map-container" class="header-menu__item" data-target="anchor">Контакты</a>
 			</div>
 			<a class="header__phone-link" href="tel:+89675600555">
 				<div class="header__phone_media">
@@ -98,7 +98,7 @@
 		</div>
 	</header>
 
-	<section class="hero wrapper-offset">
+	<section class="hero wrapper-offset" id="hero">
 		<div class="hero__content">
 			<h1 class="hero__title">
 					Эффективное лечение прикуса <span class="hero__title_accent">без брекетов</span> 
@@ -133,7 +133,7 @@
 		</div>
 
 	</section>
-	<section class="advantages wrapper-offset">
+	<section class="advantages wrapper-offset" id="advantages">
 		<div class="advantages__tooth advantages__tooth_big rellax" data-rellax-speed="1">
 			<img  src="./img/advantages_tooth_big.png" alt="">
 		</div>
@@ -383,7 +383,7 @@
 			<p class="feedback__text">*Отправляя заявку, вы соглашаетесь на обработку персональных данных.</p>
 		</div>
 	</section>
-	<section class="reviews">
+	<section class="reviews" id="reviews">
 		<div class="reviews__tooth reviews__tooth_left rellax" data-rellax-speed="1">
 			<img   src="./img/reviews_tooth_left.png" alt="">
 		</div>
@@ -419,7 +419,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="questions">
+	<section class="questions" id="questions">
 		<div class="questions__left-side">
 			<p class="questions__title">
 					Часто <br>задаваемые <br>вопросы
@@ -697,8 +697,8 @@
 			<p class="feedback__text">*Отправляя заявку, вы соглашаетесь на обработку персональных данных.</p>
 		</div>
 	</section>
-	<section class="map">
-			<div id="map" style="width: 100%; height: 400px"></div>
+	<section class="map" id="map-container">
+		<div id="map" style="width: 100%; height: 400px"></div>
 	</section>
 	<footer class="footer wrapper-offset">
 		<div class="footer__row-top">
@@ -729,11 +729,11 @@
 		<div class="footer__row-bottom">
 			<div class="footer__col-bottom">
 				<div class="footer__nav nav">
-						<a href="" class="footer-menu__item">О нас</a>
-						<a href="" class="footer-menu__item">Преимущества</a>
-						<a href="" class="footer-menu__item">Отзывы</a>
-						<a href="" class="footer-menu__item">FAQ</a>
-						<a href="" class="footer-menu__item footer-menu__item_active">Контакты</a>
+					<a href="#hero" class="footer-menu__item" data-target="anchor">О нас</a>
+					<a href="#advantages" class="footer-menu__item" data-target="anchor">Преимущества</a>
+					<a href="#reviews" class="footer-menu__item" data-target="anchor">Отзывы</a>
+					<a href="#questions" class="footer-menu__item" data-target="anchor">FAQ</a>
+					<a href="#map-container" class="footer-menu__item " data-target="anchor">Контакты</a>
 				</div>
 				<div class="footer__text">
 					<p>
@@ -788,11 +788,11 @@
 				</div>
 			</div>
 			<div class="footer__nav nav footer__nav_media">
-				<a href="" class="footer-menu__item">О нас</a>
-				<a href="" class="footer-menu__item">Преимущества</a>
-				<a href="" class="footer-menu__item">Отзывы</a>
-				<a href="" class="footer-menu__item">FAQ</a>
-				<a href="" class="footer-menu__item footer-menu__item_active">Контакты</a>
+				<a href="#hero" class="footer-menu__item" data-target="anchor">О нас</a>
+				<a href="#advantages" class="footer-menu__item" data-target="anchor">Преимущества</a>
+				<a href="#reviews" class="footer-menu__item" data-target="anchor">Отзывы</a>
+				<a href="#questions" class="footer-menu__item" data-target="anchor">FAQ</a>
+				<a href="#map-container" class="footer-menu__item " data-target="anchor">Контакты</a>
 			</div>
 			<button class="footer__doc-btn footer__doc-btn_media">
 				<p class="footer__doc-text">
