fix questions, add WhatsApp text

--- a/elainer/index.html
+++ b/elainer/index.html
@@ -94,6 +94,7 @@
 					</svg>
 					<p class="header__tel_media"> 8 967 560 05 55</p>	
 				</div>
+				<p class="header__phone-text">Свяжитесь с нами по WhatsApp</p>
 			</a>
 		</div>
 	</header>
@@ -123,6 +124,7 @@
 					</svg>
 					<p class="hero-phone__tel"> 8 967 560 05 55</p>	
 				</div>
+				<p class="hero__phone-text">Свяжитесь с нами по WhatsApp</p>
 			</a>	
 		</div>
 		<div class="hero__bg">
