--- a/dontopen/index.html
+++ b/dontopen/index.html
@@ -23,6 +23,7 @@
     <!-- END content -->
     <!-- BEGIN scripts -->
     <script type="text/javascript" src="js/app.js"></script>
+     <script type="text/javascript" src="font/roboto.js"></script>
     <!-- END scripts -->
   </body>
 </html>
