--- a/appointments/index.html
+++ b/appointments/index.html
@@ -167,29 +167,23 @@
 		<div class="table-navigation__wrapper-controlls">
 			<div class="table-navigation__controlls">
 				<div class="table-navigation__controll table-navigation__controll_inactive table-navigation__prev ">
-					<svg width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<rect width="9.67592" height="1.5" rx="0.75" transform="matrix(-0.686072 0.727533 -0.843861 -0.536562 8.925 0.80484)" fill="black"/>
-						<rect width="9.67374" height="1.5" rx="0.75" transform="matrix(-0.685219 -0.728337 0.84443 -0.535665 7.48409 14.0548)" fill="black"/>
-						<rect x="1.8" y="14.0547" width="1.8" height="14" rx="0.9" transform="rotate(-180 1.8 14.0547)" fill="black"/>
+					<svg viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M8.60912 1L3.61258 6.07275L8.60912 11.1455M1 1V11.1455" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
 					</svg>		
 				</div>
 				<div class="table-navigation__controll table-navigation__prev">
-					<svg width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<rect width="9.67592" height="1.5" rx="0.75" transform="matrix(-0.686072 0.727533 -0.843861 -0.536562 8.50003 1.75015)" fill="black"/>
-						<rect width="9.67374" height="1.5" rx="0.75" transform="matrix(-0.685219 -0.728337 0.84443 -0.535665 7.05911 15.0002)" fill="black"/>
+					<svg viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M6.22396 1L1.22742 6.07275L6.22396 11.1455" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
 					</svg>
 				</div>
 				<div class="table-navigation__controll table-navigation__next">
-					<svg width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<rect width="9.67592" height="1.5" rx="0.75" transform="matrix(0.686072 -0.727533 0.843861 0.536562 3.05176e-05 13.25)" fill="black"/>
-						<rect width="9.67374" height="1.5" rx="0.75" transform="matrix(0.685219 0.728337 -0.84443 0.535666 1.44095 3.05176e-05)" fill="black"/>
-					</svg>	
+					<svg viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0.868389 11.1455L5.86493 6.07276L0.868388 1.00002" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+					</svg>
 				</div>
 				<div class="table-navigation__controll table-navigation__next">
-					<svg width="9" height="15" viewBox="0 0 9 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<rect width="9.67592" height="1.5" rx="0.75" transform="matrix(0.686072 -0.727533 0.843861 0.536562 3.05176e-05 13.25)" fill="black"/>
-						<rect width="9.67374" height="1.5" rx="0.75" transform="matrix(0.685219 0.728337 -0.84443 0.535666 1.44095 3.05176e-05)" fill="black"/>
-						<rect x="7.12503" y="0.000152588" width="1.8" height="14" rx="0.9" fill="black"/>
+					<svg viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M1.50935 11.1458L6.50589 6.07301L1.50935 1.00026M9.11847 11.1458L9.11847 1.00026" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
 					</svg>		
 				</div>	
 			</div>
@@ -649,6 +643,55 @@
 				</tr>
 			</tbody>
 		</table>
+	</section>
+	<section class="table-navigation">
+		<div class="table-navigation__content">
+			<p class="table-navigation__text">Show rows:</p>
+			<p class="table-navigation__rows-amount">
+				500
+			</p>
+			<div class="table-navigation__rows-amount-btn">
+				<svg width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<rect width="10.9101" height="1.17367" rx="0.586834" transform="matrix(0.691321 0.722548 -0.497618 0.867396 0.584045 0.755127)" fill="#8391AD"/>
+					<rect width="10.9063" height="1.17402" rx="0.587009" transform="matrix(-0.692167 0.721737 -0.49674 -0.8679 15 1.76892)" fill="#8391AD"/>
+				</svg>
+			</div>
+			
+				
+			<p class="table-navigation__rest-rows">
+				501-1,000
+			</p>
+			<p>
+				of
+			</p>
+			<p class="table-navigation__total-rows">
+				2000
+			</p>
+		</div>
+		<div class="table-navigation__wrapper-controlls">
+			<div class="table-navigation__controlls">
+				<div class="table-navigation__controll table-navigation__controll_inactive table-navigation__prev ">
+					<svg viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M8.60912 1L3.61258 6.07275L8.60912 11.1455M1 1V11.1455" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+					</svg>		
+				</div>
+				<div class="table-navigation__controll table-navigation__prev">
+					<svg viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M6.22396 1L1.22742 6.07275L6.22396 11.1455" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+					</svg>
+				</div>
+				<div class="table-navigation__controll table-navigation__next">
+					<svg viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M0.868389 11.1455L5.86493 6.07276L0.868388 1.00002" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+					</svg>
+				</div>
+				<div class="table-navigation__controll table-navigation__next">
+					<svg viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M1.50935 11.1458L6.50589 6.07301L1.50935 1.00026M9.11847 11.1458L9.11847 1.00026" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+					</svg>		
+				</div>	
+			</div>
+		</div>
 	</section>
 	<script src="js/main.js"></script>
 </body>
